              --------------------------------------------------
This file should be used  to briefly summarize all major modifications 
introduced in the code and keeptrack of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

28-Nov-2014, M. Karamitros (phys-ctor-em-V10-00-27)
- G4EmDNAChemistry: remove useless activation line

24-Nov-2014, M. Karamitros (phys-ctor-em-V10-00-26)
- G4EmDNAChemistry: initialization procedure of the chemistry reviewed
G4DNAChemistryManager::Instance()->Initialize() is called from
G4EmDNAChemistry::ConstructProcess.
- Elastic scattering models are extended to low energies to avoid killing the 
electrons --> should be converted into a solvated electron

21-Nov-2014, M. Karamitros (phys-ctor-em-V10-00-25)
- Transfer initialization of chemistry from user code to geant4 code

17-Nov-2014, I. Hrivnacova (phys-ctor-em-V10-00-24)
- Improved printing in G4OpticalPhysics::PrintStatistics()

12-Nov-2014, A. Dotti (phys-ctor-em-V10-00-23)
- Use of the correct enumerator.

08-Nov-2014, M. Karamitros (phys-ctor-em-V10-00-22)
- Use G4MoleculeTable::GetModel rather than recreating molecules

7-Nov-2014, V.Ivanchenko (phys-ctor-em-V10-00-21)
- Use G4EmParameters used in low-energy constructors

4-Nov-2014, A.Dotti (phys-ctor-em-V10-00-20)
- Fix bug appearing in LXe boundscheck test. Actually it is a
  serious bug that can also make program crash.

28-Oct-2014, A. Dotti (phys-ctor-em-V10-00-19)
- Add trailing '/' at end of new UI optical directories

28-Oct-2014, P. Arce (phys-ctor-em-V10-00-18)
- Add G4EmLEPTSPhysics

27 Oct 14: A.Dotti ( phys-ctor-em-V10-00-17)
- Address problem #1675, this requires re engineering of 
  all UI commands related to optical processes and created
  in G4OpticalPhysics.
- Co-working tags: xrays-V10-00-06, op-V10-00-09, phys-ctor-em-V10-00-17
